--- a/PPl3/ExtraFiles/assets/css/style_v1.css
+++ b/PPl3/ExtraFiles/assets/css/style_v1.css
@@ -460,10 +460,18 @@ html {
     display: flex;
     transition: 0.5s;
     cursor: pointer;
+    width: 100%; /* Kích thước của div */
+    height: 300px;
+    border: 1px solid #ccc; /* Viền cho div */
+    /*overflow: hidden;*/ /* Ẩn phần tràn ra ngoài */
 }
 
     .list_img img {
-        width: 100%;
+        width: 100%; /* Kích thước hình ảnh chiếm toàn bộ div */
+
+        height: 100%;
+        object-fit: cover; /* Phần bị cắt đi để vừa với kích thước */
+    }
     }
 
 .img_btns {
@@ -560,7 +568,7 @@ html {
     position: absolute;
     width: 40px;
     height: 40px;
-    background: url("/assets/img/img_profile/Thierry_Henry_\(51649035951\)_\(cropped\).jpg") top center /conver no-repeat;
+/*    background-image: top center /conver no-repeat;*/
     margin: 10px 5px 0 10px;
     border-radius: 40%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
@@ -766,4 +774,12 @@ html {
     to {
         transform: translateX(0);
     }
+}
+
+
+.pic_img {
+    max-width: 100%; /* Độ rộng của vùng chứa ảnh */
+
+    max-height: 100%/* Chiều cao của vùng chứa ảnh */
+   
 }
