--- a/PPl3/Views/Shared/_LayoutPage1.cshtml
+++ b/PPl3/Views/Shared/_LayoutPage1.cshtml
@@ -373,7 +373,7 @@
         @RenderSection("SideBar", required: false)
 
 
-        <div id="seller_profile">
+        <!--<div id="seller_profile">
             <div class="seller">
                 <div class="seller_profile_container seller_profile_container_left">
                     <div class="logo_company">
@@ -413,7 +413,7 @@
                                 <button class="page_left_2_btn"><i class="fa-solid fa-chevron-left"></i></button>
                                 <p>2</p>
                                 <button class="page_right_2_btn"><i class="fa-solid fa-chevron-right"></i></button>
-                            </div>
+                            </div>-->
 
                             <!-- <div class="img_seller_profile"></div>
                             <div class="logo_shield"><i class="fa-solid fa-shield"></i></i></div>
@@ -430,11 +430,11 @@
                                 <p>1</p>
                                 <button class="page_right_1_btn"><i class="fa-solid fa-chevron-right"></i></button>
                             </div> -->
-                        </div>
+                        <!--</div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="alert_out">
         <i class="fa-solid fa-check"></i>
