--- a/PPl3/Areas/User/Views/HomeUser/Index.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Index.cshtml
@@ -7,29 +7,45 @@
 
 @{
     int index = 0;
-    PPl3.Models.user_profile p_host = new PPl3.Models.user_profile();
+    PPl3.Models.user p_host = new PPl3.Models.user();
+    PPl3.Models.user p_user = (PPl3.Models.user)HttpContext.Current.Session["user"];
+    PPl3.Models.PPL3Entities2 db = new PPl3.Models.PPL3Entities2();
 
 }
 
 @section Menu {
+    <div class="nav_login">
+        <button class="js_menuUser_btn"><i class="fa-solid fa-bars"></i></button>
+            @if (p_user.user_profile.FirstOrDefault() != null)
+            {
+                <button class="js_menuUser_btn icon_style"  style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat"></button>
+               
+            }
+            else
+            {
+            <button class="js_menuUser_btn">
+                <i class="fa-solid fa-user"></i>
+            </button>
+            }
+    </div>
     <div class="sub_nav sub_nav_guest js_sub_nav_guest">
         <ul class="menu_user js_menu_user">
             <li class=""><button>Messages</button></li>
             <li class=""><button>Notifications</button></li>
             <li class=""><button>Trips</button></li>
-            <li class=""><button>Wishlist</button></li>
+            <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
             <li><a href="Content">Manage listings</a></li>
             <li><a href="#">Account</a></li>
             <li><a href="#">Gift Cards</a></li>
             <li><a href="#">Help Center</a></li>
-            <li class="user_log_out">Log out</li>
+            <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
         </ul>
     </div>
     @if (ViewBag.Check == false)
     {
         <div class="alert_complete">
             <i class="fa-solid fa-check"></i>
-            <p>Welcome back @Model.InforUser.account_name !</p>
+            <p>Welcome @p_user.account_name !</p>
         </div>
     }
 
@@ -42,16 +58,16 @@
         {
             if (item.id == ViewBag.AmenityId)
             {
-                <div class="room_classifi_item room_classifi_item_@item.id activeListRoom" onclick="window.location.href='/User/HomeUser/Index?id=@item.id'">
+                <div class="room_classifi_item room_classifi_item_@item.id " onclick="window.location.href='/User/HomeUser/Index?id=@item.id&checkID=@ViewBag.checkId'">
                     <div class="box_room_classifi">
                         <img src="@item.icon_image" />
-                        <span>@item.amenity_name</span>
+                        <span class="activeListRoom">@item.amenity_name</span>
                     </div>
                 </div>
             }
             else
             {
-                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/User/HomeUser/Index?id=@item.id'">
+                <div class="room_classifi_item room_classifi_item_@item.id" onclick="window.location.href='/User/HomeUser/Index?id=@item.id&checkID=@ViewBag.checkId'">
                     <div class="box_room_classifi">
                         <img src="@item.icon_image" />
                         <span>@item.amenity_name</span>
@@ -73,17 +89,11 @@
     {
         <div class="col l-3 m-4 c-6 content_container">
             <div class="content_item content_item_@position">
-                <div class="list_img list_img_@position">
+                <div class="list_img list_img_@position" onclick="window.location.href='/user/homeuser/Detail?id=@item.id'">
                     @foreach (var pic in item.property_images)
                     {
                         <img class="img_@position" src="@pic.pi_image" alt="">
                     }
-                    @*<img class="img_0" src="" alt="">
-            <img class="img_0" src="" alt="">
-            <img class="img_0" src="" alt="">
-            <img class="img_0" src="" alt="">
-            <img class="img_0" src="" alt="">
-            <img class="img_0" src="" alt="">*@
                 </div>
                 <div class="img_btns">
                     <div class="btn_left btn_left_@position img_btn"><i class="fa-solid fa-angle-left"></i></div>
@@ -110,19 +120,27 @@
                     }
 
                 </div>
-
-                <div class="heart_icon heart_icon_@position">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-
-                @{
-                    PPl3.Models.user p_user = null;
+                
+                @if (db.favourites.Any(row => row.userID == p_user.id && row.property_id == item.id) == true)
+                {
+                    <div class="heart_icon heart_icon_@position">
+                        <i class="fa-solid fa-heart loved"></i>
+                    </div>
                 }
+                else
+                {
+                    
+                    <div class="heart_icon heart_icon_@position" onclick="window.location.href='/user/homeuser/AddWishList?id=@item.id&checkId=@ViewBag.checkId'">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                }
+
+
                 @{ foreach (var u in Model.Model3Data)
                     {
                         if (u.id == item.userId)
                         {
-                            p_user = u;
+                            p_host = u;
                             break;
                         }
                     }
@@ -130,7 +148,7 @@
 
                 <div class="profile_seller profile_seller_@position" data-userid="@item.userId">
                     <div class="img_profile">
-                        <img class="img_seller" src="@p_user.user_profile.FirstOrDefault().user_avatar" alt="">
+                        <img class="img_seller" src="@p_host.user_profile.FirstOrDefault().user_avatar" alt="">
                     </div>
                     <div class="profile_behind">
                     </div>
@@ -140,7 +158,17 @@
 
             <div class="name_hotel name_hotel_@position">
                 <p>@item.p_address</p>
-                <span><i class="fa-solid fa-star"></i>3.6</span>
+                @{
+
+                    double sum = 0;
+                    foreach (var row in item.property_reviews)
+                    {
+                        sum = sum + double.Parse(row.overall_rating);
+                    }
+                    sum = sum / item.property_reviews.ToArray().Length;
+
+                }
+                <span><i class="fa-solid fa-star"></i>@sum</span>
             </div>
 
             <div class="review_hotel review_hotel_@position">
@@ -163,10 +191,10 @@
                     </div>
                     <div class="profile_left profile_left_@position">
                         <div class="profile_left_box">
-                            <div class="img_seller_profile" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat">
+                            <div class="img_seller_profile" style="background : url(@p_host.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat">
                             </div>
                             <span class="logo_shield"><i class="fa-solid fa-shield"></i></span>
-                            <span class="name_seller">@p_user.account_name</span>
+                            <span class="name_seller">@p_host.account_name</span>
                             <div class="contact_seller">
                                 <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                                 <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
@@ -185,7 +213,7 @@
                     <div class="profile_right">
                         <div class="profile_right_box">
                             <div class="about_seller">
-                                <p>@p_user.user_profile.FirstOrDefault().user_about</p>
+                                <p>@p_host.user_profile.FirstOrDefault().user_about</p>
                             </div>
 
                             <div class="page_arrow">
