--- a/PPl3/ExtraFiles/assets/css/style_v1.css
+++ b/PPl3/ExtraFiles/assets/css/style_v1.css
@@ -162,7 +162,6 @@ html {
         background-color: rgb(113, 113, 113);
         color: #fff;
         border-radius: 20px;
-        padding: 0 4px;
         margin-right: -4px;
         margin-left: 4px;
     }
@@ -468,7 +467,6 @@ html {
 
     .list_img img {
         width: 100%; /* Kích thước hình ảnh chiếm toàn bộ div */
-
         height: 100%;
         object-fit: cover; /* Phần bị cắt đi để vừa với kích thước */
     }
@@ -654,7 +652,7 @@ html {
 }
 
 .room_classifi_item {
-    padding: 10px 10px;
+    padding: 10px 10px 0 10px;
     width: 100px;
 }
 
@@ -671,6 +669,7 @@ html {
     .box_room_classifi span {
         font-size: 13px;
         font-weight: 600;
+        padding-bottom: 10px;
     }
 
 .room_classifi_item img {
@@ -678,7 +677,7 @@ html {
     color: #999;
 }
 
-.room_classifi_item.activeListRoom {
+.activeListRoom {
     border-bottom: 2px solid #000;
 }
 
@@ -794,4 +793,19 @@ html {
 
 .img_seller_profile img {
     object-fit: cover;
+}
+
+.icon_style {
+    display: inline-block;
+    width: 38px;
+    height: 38px;
+    margin-right: 15px;
+}
+
+.display_anitimy {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    width: 100%;
+    border-bottom: 1px solid #ccc;
 }
