--- a/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Detail.cshtml
@@ -337,7 +337,7 @@
                                                 <div class="calendar-days"></div>
                                             </div>
                                             <div class="calendar-footer">
-                                                <div class="toggle clear_date_btn">
+                                                <div class="clear_date_btn">
                                                     <a>Clear Date</a>
                                                 </div>
                                             </div>
