--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -32,7 +32,7 @@
                 <div class="row sm-gutter nav">
                     <div class="col l-2 m-2 c-2">
                         <div class="nav_logo">
-                            <a href="index.html" class="logo_link">
+                            <a href="/user/homeuser/index" class="logo_link">
                                 <i class="fa-brands fa-think-peaks" style="color: #ff385c;"></i>
                                 <h1>T|.|N|.|T</h1>
                             </a>
@@ -323,7 +323,7 @@
                                                 <div class="calendar-days"></div>
                                             </div>
                                             <div class="calendar-footer">
-                                                <div class="toggle clear_date_btn">
+                                                <div class="clear_date_btn">
                                                     <a>Clear Date</a>
                                                 </div>
                                             </div>
