--- a/PPl3/Areas/User/Views/HomeUser/Index.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Index.cshtml
@@ -13,20 +13,22 @@
 
 }
 
+
+
 @section Menu {
     <div class="nav_login">
         <button class="js_menuUser_btn"><i class="fa-solid fa-bars"></i></button>
-            @if (p_user.user_profile.FirstOrDefault() != null)
-            {
-                <button class="js_menuUser_btn icon_style"  style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat"></button>
-               
-            }
-            else
-            {
+        @if (p_user.user_profile.FirstOrDefault() != null)
+        {
+            <button class="js_menuUser_btn icon_style" style="background : url(@p_user.user_profile.FirstOrDefault().user_avatar) top center /cover no-repeat"></button>
+
+        }
+        else
+        {
             <button class="js_menuUser_btn">
                 <i class="fa-solid fa-user"></i>
             </button>
-            }
+        }
     </div>
     <div class="sub_nav sub_nav_guest js_sub_nav_guest">
         <ul class="menu_user js_menu_user">
@@ -120,7 +122,7 @@
                     }
 
                 </div>
-                
+
                 @if (db.favourites.Any(row => row.userID == p_user.id && row.property_id == item.id) == true)
                 {
                     <div class="heart_icon heart_icon_@position">
@@ -129,8 +131,8 @@
                 }
                 else
                 {
-                    
-                    <div class="heart_icon heart_icon_@position" onclick="window.location.href='/user/homeuser/AddWishList?id=@item.id&checkId=@ViewBag.checkId'">
+
+                    <div class="heart_icon heart_icon_@position" onclick="SubmitWishHotel('@item.id')">
                         <i class="fa-solid fa-heart"></i>
                     </div>
                 }
@@ -231,3 +233,21 @@
 }
 
 
+
+<script src="~/Scripts/jquery-3.7.1.js"></script>
+<script src="~/Scripts/jquery-3.7.1.min.js"></script>
+<script>
+    function SubmitWishHotel(hotelId) {
+        $.ajax({
+            url: "/user/homeuser/AddWishList",
+            type: "POST",
+            data: { id: hotelId },
+            success: function (data) {
+                console.log(data);
+            },
+            error: function (err) {
+                console.log(err);
+            }
+        })
+    }
+</script>
