--- a/PPl3/Views/Shared/_LayoutPage1.cshtml
+++ b/PPl3/Views/Shared/_LayoutPage1.cshtml
@@ -39,7 +39,7 @@
                             <a href="">Airbnb your home</a>
                             <button><i class="fa-solid fa-globe"></i></button>
                         </div>
-                        
+
                         @RenderSection("Menu", required: false)
                     </div>
 
@@ -144,7 +144,7 @@
             </div>
         </div>
     </div>
-    
+
     <div>
         @RenderBody()
     </div>
@@ -154,5 +154,9 @@
     <script src="~/ExtraFiles/JS/room_classifi_v1.js?v=1"></script>>
     <script src="~/ExtraFiles/JS/seller_profile.js?v=2"></script>
     <script src="~/ExtraFiles/JS/Sign_Log_v1.js?v=1"></script>
+    <script src="~/Scripts/jquery-3.7.1.js"></script>
+    <script src="~/Scripts/jquery-3.7.1.min.js"></script>
 </body>
 </html>
+
+@RenderSection("Scripts", required: false)
