--- a/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
@@ -55,7 +55,7 @@
                             <ul class="menu_user js_menu_user">
                                 <li class=""><button>Messages</button></li>
                                 <li class=""><button>Notifications</button></li>
-                                <li class=""><button>Trips</button></li>
+                                <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="Content">Manage listings</a></li>
                                 <li><a href="#">Account</a></li>
