--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -22,7 +22,7 @@
     <link href="~/ExtraFiles/assets/css/style_v1.css?v=3" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/seller_profile.css?v=2" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Sign_Log_v1.css?v=1" rel="stylesheet" />
-    <link href="~/ExtraFiles/assets/css/product.css?v=7" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/product.css?v=8" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -350,7 +350,7 @@
                                     <div class="check_in_out">
                                         <div class="check_in check_item">
                                             <button>Check In</button>
-                                            <span>3/22/2024</span>
+                                            <span>Add Date</span>
                                         </div>
                                         <div class="check_out check_item">
                                             <button>Check Out</button>
@@ -501,13 +501,14 @@
                                                         <p>Review</p>
                                                     </div>
                                                     <div class="infor_basics_item">
-                                                        @*@{ 
-                                                            count = 0;
-                                                            foreach(var item in property.user.host_reviews.ToList()) { 
-                                                                count = count + item.
+                                                        @{ 
+                                                            sum = 0;
+                                                            foreach(var item in property.user.host_reviews.ToList()) {
+                                                                sum = sum + double.Parse(item.rating);
                                                             }
-                                                        }*@
-                                                        <span>4.84<i class="fa-solid fa-star"></i></span>
+                                                            sum = sum / property.user.host_reviews.ToArray().Length;
+                                                        }
+                                                        <span>@sum<i class="fa-solid fa-star"></i></span>
                                                         <p>Rating</p>
                                                     </div>
                                                     <div class="infor_basic">
